kyy-k8s-config/src/app/website/website-yuncms/website-yuncms-yuncms-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: website-yuncms
  name: website-yuncms
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: website-yuncms
