kyy-k8s-config/src/app/website/website-yuncms/website-yuncms-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: website-yuncms
  name: website-yuncms
spec:
  rules:
    - host: www.kaoyaya.cn
      http:
        paths:
          - backend:
              serviceName: website-yuncms
              servicePort: 80
